web/styles/modal.css
/* Styles for the Micromodal-based modals */
:root {
    /* Exit buttons are sometimes Cancel, but sometimes
       other "Nah, forget it" actions. */
    --color-exit-button-text: hsl(0deg 0% 0%);
    --color-exit-button-border: hsl(300deg 2% 11% / 30%);
    --color-exit-button-background: hsl(226deg 1% 42% / 20%);
    --color-exit-button-background-interactive: hsl(226deg 1% 42% / 27%);

    /* Since modals are also present in portico and billing pages, we define
       the modal related variables directly here in the modal.css — which is
       a part of the common.ts bundle shared between portico and main app. */
    --color-background-modal-overlay: color-mix(
        in oklch,
        hsl(0deg 0% 0%) 25%,
        transparent
    );
    --color-modal-heading-text: light-dark(
        hsl(0deg 0% 15%),
        color-mix(in oklch, hsl(0deg 0% 100%) 85%, transparent)
    );
    --color-background-modal: light-dark(hsl(0deg 0% 93%), hsl(0deg 0% 14%));
    --color-background-modal-bar: light-dark(
        hsl(0deg 0% 96%),
        hsl(0deg 0% 20%)
    );
    --color-border-modal: light-dark(
        hsl(0deg 0% 55%),
        color-mix(in oklch, hsl(0deg 0% 100%) 15%, transparent)
    );
    --color-border-modal-bar: light-dark(
        hsl(0deg 0% 76%),
        color-mix(in oklch, hsl(0deg 0% 100%) 12%, transparent)
    );
}

.modal__overlay {
    position: fixed;
    inset: 0;
    background: var(--color-background-modal-overlay);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 105;
}

.modal__container {
    display: flex;
    flex-direction: column;
    background-color: var(--color-background-modal);
    max-width: calc(100% - 32px);
    max-height: 96%;
    width: 37.1428em; /* 520px at 14px em */
    overflow: hidden;
    border: 1px solid var(--color-border-modal);
    border-radius: 7px;
    box-sizing: border-box;
}

.modal__header {
    display: grid;
    /* The grid structure uses two grid columns to define the
       area for the modal close button, with the rightmost column
       being used for the close button and to also serve as the
       right padding and the column to its left accounts for the
       space of modal close button icon width - right padding. */
    grid-template:
        ". modal-header-content modal-close-button modal-close-button" 2.75em /* 44px at 16px/1em */
        ". modal-header-content .                  ." minmax(0, auto)
        ". modal-tab-switcher   modal-tab-switcher ." minmax(0, auto)
        / 1em minmax(0, 1fr) minmax(0, auto) 1em; /* 16px at 16px/1em */
    background-color: var(--color-background-modal-bar);

    &:has(+ .modal__content) {
        border-bottom: 1px solid var(--color-border-modal-bar);
    }
}

.modal__header-content {
    grid-area: modal-header-content;
    /* 10px at 16px/1em */
    padding: 0.625em 0;
}

.modal__footer {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    /* 8px 16px 12px 16px at 16px/1em */
    padding: 0.5em 1em 0.75em;
    background-color: var(--color-background-modal-bar);
}

.modal__content + .modal__footer {
    /* These styles apply only when the modal content
       is present in the modal. */
    padding: 0.75em 1em; /* 12px 16px at 16px/1em */
    border-top: 1px solid var(--color-border-modal-bar);
}

.modal__title {
    margin: 0;
    /* 20px at 16px/1em */
    font-size: 1.25em;
    font-weight: 650;
    line-height: 1.2; /* 24px at 20px/1em */
    overflow: hidden;
    overflow-wrap: break-word;
    color: var(--color-modal-heading-text);

    .icon-button {
        /* 16px icon + 4px padding = 24px icon button,
           which matches with the line height of the
           modal title. */
        padding: 0.25em; /* 4px at 16px/1em */
    }

    /* help_link_widget margin for the fa-circle-o. */
    .help_link_widget {
        margin-left: 5px;
    }
}

.modal__title:has(.stream-or-topic-reference) {
    /* Reduce the font weight of headings that
       include stream or topic references (e.g.,
       topic move/rename modals). */
    font-weight: 450;

    .stream-or-topic-reference {
        /* Make the stream or topic references
           more prominent. */
        font-weight: 600;
    }
}

.modal__subtitle {
    margin-top: 0.875em; /* 14px at 16px/1em */
    line-height: 1.25; /* 20px at 16px/1em */
}

.modal__close {
    grid-area: modal-close-button;
    align-self: center;

    &:focus-visible {
        outline-offset: -2px !important;
    }
}

.modal__content {
    display: flex;
    flex-direction: column;
    /* 14px 16px at 16px/1em */
    padding: 0.875em 1em;
    /* Prevent the appearance of a horizontal
       native scrollbar at certain
       info-density/zoom levels. */
    overflow: hidden auto;
    /* Set a max-width, less the 1em of left and right
       padding specified above. */
    max-width: calc(100% - 2em);

    > .simplebar-wrapper {
        /* Compensate the 3em reduced in modal_content so it positions
           itself correctly */
        max-width: calc(100% + 3em);
    }
}

#api_key_value {
    font-family: "Source Code Pro", monospace;
    font-size: 1em;
}

.modal__button {
    /* We need the backup value for billing related html files where
       this variable is not defined. */
    font-size: var(--base-font-size-px, 14px);
    font-family: inherit;
    padding: 8px 16px;
    background-color: hsl(0deg 0% 90%);
    border-radius: 4px;
    border-width: 0;
    cursor: pointer;
    text-transform: none;
    overflow: visible;
    line-height: 1.15;
    margin: 0;
    will-change: transform;
    backface-visibility: hidden;
    transform: translateZ(0);
    transition: transform 0.25s ease-out;

    &:hover {
        text-decoration: none;
    }

    &:disabled {
        cursor: not-allowed;
        opacity: 0.5;
    }
}
/* ... */

